Refactoring of the the code in the API server
